--- a/test.css
+++ b/test.css
@@ -1,31 +1,31 @@
 body{
-    background-color: lightgrey;
+    background-color: teal;
 }
 
 h1{
-font-size: 30px;
-color: teal;
+    font-size: 30px;
+    color: teal;
 }
 
 h2{
-color: red;
-font-size: 20px;
+    color: red;
+    font-size: 20px;    
 }
 
 h2{
-color: green;
+    color: green;
 }
 
 .big{
-font-size: 60px;
+    font-size: 60px;
 }
 
 .uppercase{
-text-transform: uppercase;
+    text-transform: uppercase;
 }
 
 .big.uppercase{
-color: navy;
+    color: navy;
 }
 
 h1 span{
