--- a/css/test.css
+++ b/css/test.css
@@ -1,29 +1,30 @@
-h1{
-font-size: 30px;
-color: teal;
+body-style{
+    background-color: lightgrey;   
 }
-
-h2{
-color: red;
-font-size: 20px;
+h1 {
+    font-size: 30px;
+    color: teal;
 }
-
 h2{
-color: green;
+    color: red;
+    font-size: 20px;
+}
+h2 {
+    color: green
 }
 
 .big{
-font-size: 60px;
+    font-size: 60px;
 }
 
 .uppercase{
-text-transform: uppercase;
+    text-transform: uppercase;
 }
 
 .big.uppercase{
-color: navy;
+    color:navy;
 }
 
 h1 span{
-    color:violet;
+    color: violet;
 }
